fix issues when running app in directory with spaces